data: cron update

--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -7280,9 +7280,9 @@ series:
         dtstart: 2022-09-07 19:00:00+02:00
         dtend: 2022-09-07 22:00:00+02:00
   - meetupcom:
-      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
-      og_title: First Wednesday Of The Month - Ruby, Wed, Oct 5, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfydcnbhb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
