--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -11751,16 +11751,15 @@ series:
       meta_description: '**Talk Synopsis**
 
         Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity al'
-      og_title: TypeDB Academy | Modelling Principles, Tue, Oct 11, 2022, 6:30 PM   | Meetup
+      og_title: TypeDB Academy | Modelling Principles, Wed, Oct 12, 2022, 6:30 PM   | Meetup
       url: https://www.meetup.com/typedb-prague/events/288456873/
       ical:
         summary: TypeDB Academy | Modelling Principles
         description: 'TypeDB Prague Engineers
 
-          Tuesday, October 11 at 6:30 PM
+          Wednesday, October 12 at 6:30 PM
 
-
-          **Talk Synopsis**Join the (https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity...
+          \n**Talk Synopsis**Join the (https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity...
 
 
           https://www.meetup.com/typedb-prague/events/288456873/'
@@ -11771,8 +11770,8 @@ series:
         status: CONFIRMED
         uid: event_288456873@meetup.com
         url: https://www.meetup.com/typedb-prague/events/288456873/
-        dtstart: 2022-10-11 18:30:00+02:00
-        dtend: 2022-10-11 19:30:00+02:00
+        dtstart: 2022-10-12 18:30:00+02:00
+        dtend: 2022-10-12 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
@@ -12312,6 +12311,29 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287924630/
         dtstart: 2022-09-20 18:30:00+02:00
         dtend: 2022-09-20 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Beyond SQL | Comparing SQL to TypeQL
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, September 27 at 6:30 PM
+
+          \n**Talk Synopsis**Using SQL to query relational databases is easy. As a declarative language, it’s straightforward to write queries and build powerful ...
+
+
+          https://www.meetup.com/typedb-prague/events/287924665/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287924665@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287924665/
+        dtstart: 2022-09-27 18:30:00+02:00
+        dtend: 2022-09-27 19:30:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
