data: cron update

--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -10665,3 +10665,27 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/
         dtstart: 2022-09-21 19:00:00+02:00
         dtend: 2022-09-21 23:59:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #136 Distributed Databases'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, September 21 at 7:00 PM
+
+
+          Pyvo bude i v září! Můžete se těšit na prezentaci na téma Distribuované databáze a určitě dojde i na lightning talky. Potkáme se v restauraci Botič. W...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/'
+        location: Botič Restaurant (Nuselská 159/114, Praha 4-Michle, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcmbcc@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/
+        dtstart: 2022-09-21 19:00:00+02:00
+        dtend: 2022-09-21 23:59:00+02:00
