--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -8769,27 +8769,30 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
-      og_title: 'Pyvo Prague #, Wed, Oct 19, 2022, 7:00 PM   | Meetup'
+      meta_description: 'V říjnu se můžete těšit na prezentaci na téma AI Safety and Stampy, a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřeném salonku (nahoře).
+
+
+        This mont'
+      og_title: 'Pyvo Prague #137, Wed, Oct 19, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
       ical:
-        summary: 'Pyvo Prague #'
+        summary: 'Pyvo Prague #137'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, October 19 at 7:00 PM
 
 
-          We will meet for an informal chat about Python, programming, and more. Details will be added.
+          V říjnu se můžete těšit na prezentaci na téma AI Safety and Stampy, a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřeném salonk...
 
 
-          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/'
-        location: Prague (, Prague, Czech Republic)
+          https://www.meetup.com/pyvo-prague-python-meetup/events/289047754/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_bcxlssydcnbzb@meetup.com
-        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/289047754/
         dtstart: 2022-10-19 19:00:00+02:00
         dtend: 2022-10-19 23:59:00+02:00
   - meetupcom:
@@ -10497,6 +10500,30 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfccbxb/
         dtstart: 2023-01-18 19:00:00+01:00
         dtend: 2023-01-18 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #136 Distributed Databases'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, September 21 at 7:00 PM
+
+
+          Pyvo bude i v září! Můžete se těšit na prezentaci na téma Distribuované databáze a určitě dojde i na lightning talky. Potkáme se v restauraci Botič. W...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/'
+        location: Botič Restaurant (Nuselská 159/114, Praha 4-Michle, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcmbcc@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/288496722/
+        dtstart: 2022-09-21 19:00:00+02:00
+        dtend: 2022-09-21 23:59:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
