--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -26654,14 +26654,9 @@ series:
         dtstart: 2022-09-14 09:00:00+02:00
         dtend: 2022-09-14 10:00:00+02:00
   - meetupcom:
-      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
-
-        https://www.datascript.cz/morning-talks/prometheus-pro-logging-metering-a-profiling/
-
-
-        **Na co se můžete těšit:*'
-      og_title: Prometheus pro logging, metering a profiling, Wed, Oct 12, 2022, 9:00 AM   | Meetup
-      url: https://www.meetup.com/morning-talks/events/288152846/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Prometheus pro logging, metering a profiling
         description: 'Morning Talks
