--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -11748,11 +11748,9 @@ series:
         dtstart: 2022-09-15 18:30:00+02:00
         dtend: 2022-09-15 19:30:00+02:00
   - meetupcom:
-      meta_description: '**Talk Synopsis**
-
-        Join the [TypeDB community](https://docs.vaticle.com/docs/general/quickstart) to learn how we think about data modelling, and how TypeDB''s expressivity al'
-      og_title: TypeDB Academy | Modelling Principles, Wed, Oct 12, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/288456873/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: TypeDB Academy | Modelling Principles
         description: 'TypeDB Prague Engineers
