--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -17574,12 +17574,9 @@ series:
         dtstart: 2022-08-24 18:00:00+02:00
         dtend: 2022-08-24 22:00:00+02:00
   - meetupcom:
-      meta_description: '**💥 [MAKE SURE TO GET YOUR FREE TICKET HERE](https://www.eventbrite.com/e/mobile-leads-meetup-vol2-tickets-427847462277?aff=meetup) 💥**
-
-
-        You’re invited to Part 2 of the *'
-      og_title: Mobile Leads Meetup Vol.2, Wed, Oct 12, 2022, 5:00 PM   | Meetup
-      url: https://www.meetup.com/strv-meetups/events/288749089/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Mobile Leads Meetup Vol.2
         description: 'STRV Meetups
