--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -18632,3 +18632,27 @@ series:
         url: https://www.meetup.com/strv-meetups/events/288474366/
         dtstart: 2022-09-29 18:00:00+02:00
         dtend: 2022-09-29 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Mobile Leads Meetup Vol.2
+        description: 'STRV Meetups
+
+          Wednesday, October 12 at 5:00 PM
+
+
+          **💥 (https://www.eventbrite.com/e/mobile-leads-meetup-vol2-tickets-427847462277?aff=meetup) 💥** You’re invited to Part 2 of the **Mobile Leads Meetup*...
+
+
+          https://www.meetup.com/strv-meetups/events/288749089/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288749089@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/288749089/
+        dtstart: 2022-10-12 17:00:00+02:00
+        dtend: 2022-10-12 22:00:00+02:00
